fixed whitespace on right of page

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -411,7 +411,7 @@ a:active {
     	font-size: 12pt;
     }
     .box {
-		width: 95%;
+		width: 93%;
 	}
     
 	.left {
@@ -435,7 +435,6 @@ a:active {
 	}
 	.main {
 		width: 100%;
-		margin: 0px;
 	}
 	.nav .element-right {
 		visibility: hidden;
